src/components/style.css
p {
  font-weight: 300;
}

.fullscreen {
  display: flex;
  flex-direction: row;
  width: 100vw;
  height: 100vh;
}

h1 {
  font-size: 200%;
}

h2 {
  font-weight: 300;
  font-size: 120%;
}

.gap-5 {
  width: 100%;
  height: 5%;
}

.gap-10 {
  width: 100%;
  height: 10%;
}

.main-panel {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 85%;
  height: 100%;
}

.main-tile {
  display: flex;
  flex-direction: column;
  color: #424242;
  width: 80%;
  height: 100%;
  padding-left: 5%;
  padding-right: 5%;
  overflow-y: auto;
}

.navbar {
  display: flex;
  flex-direction: column;
  width: 25%;
  height: 100%;
}

.nav-tile {
  color: white;
  width: 100%;
  height: 25%;
  display: flex;
  align-items: center;
  justify-content: center;
}

.route-link {
  color: white;
  text-decoration: none;
}

.title {
  padding-bottom: 1%;
  font-size: 400%;
  margin-top: 3%;
  margin-bottom: 3%;
  border-color: #424242;
  border-bottom: solid;
  border-width: 1px;
}

.subtitle {
  font-size: 200%;
}

.section-wrapper {
  display: flex;
  color: white;
  width: 100%;
  height: 100%;
  justify-content: center;
  align-items: center;
  position: relative;
}

.section-wrapper:hover .tile-img {
  width: 25%;
  transition: 0.2s all ease;
}

.section-wrapper .tile-img {
  transition: 0.2s all ease;
}

.section-content {
  position: absolute;
  bottom: 10%;
  left: 10%;
}

.bar {
  background-color: white;
  width: 2vw;
  height: 0.5vh;
}

.main-panel .bar {
  background-color: #424242;
  width: 4vw;
}

.side-panel .bar {
  background-color: white;
}

.profile-container {
  width: 80%;
  padding-left: 10%;
  padding-right: 10%;
  margin-top: 5%;
  text-align: center;
}

.profile {
  max-width: 40%;
  height: auto;
  object-fit: cover;
  border-radius: 50%;
  margin: 5%;
}

.title-wrapper {
  display: flex;
  flex-direction: column;
  width: 100%;
  height: auto;
}

#pt {
  width: 100%;
  height: 100%;
}

.background-wrapper {
  width: 100%;
  height: 100%;
  display: flex;
  position: relative;
  justify-content: center;
  align-items: center;
}

.background-wrapper > div {
  position: absolute;
  z-index: 2;
}

.tile-img {
  width: 30%;
  opacity: 0.5;
}

.connect-container {
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.social {
  max-height: 100%;
}

.social-container {
  width: 100%;
  height: 20%;
  display: flex;
  flex-direction: row;
  justify-content: center;
}

.social-container div {
  width: 20%;
  height: 100%;
  background-repeat: no-repeat;
  background-position: center;
}

.social-container div a {
  display: inline-block;
  width: 100%;
  height: 100%;
}

.centered-text {
  font-size: 200%;
  text-align: center;
}

.project-list {
  width: 100%;
  flex-shrink: 0;
  display: flex;
  flex-direction: column;
}

.project-container {
  margin-bottom: 5%;
}

.project-container h1 {
  font-size: 150%;
  font-weight: bold;
  margin-bottom: 1%;
}

.project-container a {
  color: #424242;
  text-decoration: none;
  transition: 0.2s all ease;
}

.project-container a:hover {
  color: #868686;
  transition: 0.2s all ease;
}

.project-container ul {
  list-style: none;
  display: flex;
  overflow-x: scroll;
  flex-direction: row;
  margin-bottom: 2%;
}

.project-container ul li {
  background-color: #EAEAEA;
  font-family: 'Inconsolata', monospace;
  padding: 5px;
  margin-right: 1%;
}

.footer {
  font-size: 75%;
  text-align: center;
  border-top: solid;
  border-width: 1px;
  border-color: #A8A8A8;
  padding: 3%;
  margin-top: 5%;
}

@media only screen and (max-width: 768px) {
  .fullscreen {
    flex-direction: column-reverse;
  }

  h1 {
    font-size: 150%;
  }

  h2 {
    font-size: 110%;
  }

  .navbar {
    flex-direction: row;
    background-color: #424242;
    width: 100vw;
    height: 10%;
  }

  .nav-tile {
    width: 20%;
    height: 100%;
  }

  .nav-tile > a {
    text-decoration: none;
    color: white;
  }

  .main-panel {
    width: 100vw;
  }

  .main-tile {
    width: 90%;
  }

  .title {
    font-size: 250%;
  }

  .profile-container {
    width: 100%;
    padding: 0%;
  }

  .profile {
    max-width: 75%;
  }
}

